fix overflow

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,7 +22,7 @@ article.post {
   // @media all and (max-width: 68rem) {
   //   width: 100%;
   // }
-  width: 95%;
+  // width: 95%;
   text-align: initial;
 }
 
